# trigger

./: .gitignore  .gitreview  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG  CHANGELOG.md  CLAUDE.md  LICENSE.md  LICENSE.rst  MANIFEST.in  MIGRATION_GUIDE.md  README.md  README.rst  SANDIA.md  SANDIA.rst  TODO.md  TODO.rst  acceptance_test.sh  build.sh  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  todo_snl.txt  tox.ini  unit_test.sh  update_git
.github/workflows/: ci.yml  release-preview.yml  release.yml  tests.yml
benchmarks/: ipy_vs_netaddr.py
conf/: acl_queue.sqlite.sql  acl_queue_schema.sql  autoacl.py  dot_gorc.example  fe_extensions.py  netdevices.csv  netdevices.json  netdevices.sql  trigger_settings.py
configs/: autoacl.py  bounce.py  dot_gorc.example  trigger_settings.py
docs/: Makefile  about.rst  changelog.rst  conf.py  configuration.rst  development.rst  examples.rst  experimental.rst  index.rst  installation.rst  interactive_mode.rst  license.rst  make.bat  migration.rst  new_vendors.rst  overview.rst  platforms.rst  support.rst  trigger-1.3.rst
docs/_ext/: triggerdocs.py
docs/_static/: rtd.css
docs/api/: acl.rst  changemgmt.rst  cmds.rst  conf.rst  contrib.rst  exceptions.rst  gorc.rst  index.rst  netdevices.rst  netscreen.rst  rancid.rst  tacacsrc.rst  twister.rst  utils.rst
docs/plans/: 2026-02-02-v2.0.0-release-design.md  2026-02-04-ruff-modernization-design.md
docs/usage/: cli.rst  configuration.rst  gorc.rst  index.rst  netdevices.rst  plugins.rst  tacacsrc.rst
docs/usage/scripts/: acl.rst  acl_script.rst  aclconv.rst  check_access.rst  gnng.rst  go.rst  gong.rst  netdev.rst
examples/: commando_reactorless.py  sshendpoint_updatecmdb.py
examples/normalizer/: Normalize.py  README.md  README.rst  Report.py  Router.py  TriggerReactorlessNormalize.py  pinger.py  test-units.csv
examples/xmlrpc_server/: README.rst  cacert.pem  server.key  start_xmlrpc.sh  trigger-xmlrpc.init
notes/: JUNOS Firewall ACLs Compared.docx  JUNOSFirewallACLsCompared.markdown  srx_notes.markdown  why trigger wraps up the ACLProcessor class.docx  why_trigger_wraps_up_the_ACLProcessor_class.markdown
poc-lark/: RESULTS.md  benchmark.py  ios_acl.lark  ios_transformer.py  test_parse.py
tests/: acl.py  conftest.py  netdevices.py  setup_env.sh  tacacsrc.py  test_acl.py  test_acl_db.py  test_acl_queue.py  test_changemgmt.py  test_except.py  test_netdevices.py  test_scripts.py  test_tacacsrc.py  test_templates.py  test_twister.py  test_twister2.py  test_utils.py  trigger
tests/acceptance/: trigger_acceptance_tests.py
tests/acceptance/data/: .tackf  netdevices.xml  settings.py
tests/data/: acl.test  acls.db  autoacl.py  bounce.py  brokenpw_tacacsrc  emptypw_tacacsrc  junos-examples.txt  longpw_tacacsrc  medium_tacacsrc  netdevices.xml  settings.py  srx_acl.test  tacacsrc  tackf
tests/utils/: __init__.py  misc.py  mock_redis.py
tools/: convert_tacacsrc.py  gen_tacacsrc.py  init_task_db  nd2json.py  nd2sqlite.py  prepend_acl_dot  tacacsrc2gpg.py
trigger/: __init__.py  changemgmt.py  cmds.py  cmds2.py  conf.py  exceptions.py  gorc.py  juniper_srx.py  netdevices.py  netscreen.py  rancid.py  tacacsrc.py  twister.py  twister2.py  twister3.py
trigger/acl/: README.rst  __init__.py  autoacl.py  db.py  dicts.py  exceptions.py  fe.py  grammar.py  ios.py  junos.py  models.py  parser.py  queue.py  support.py  tools.py
trigger/changemgmt/: __init__.py  bounce.py
trigger/conf/: __init__.py  global_settings.py
trigger/contrib/: __init__.py  commando.py  config_device.py  show_clock.py  show_version.py  xmltodict.py
trigger/contrib/commando/: __init__.py
trigger/contrib/commando/plugins/: __init__.py  config_device.py  gather_info.py  show_clock.py  show_version.py
trigger/contrib/docommand/: __init__.py  core.py  ding.py  do.py
trigger/contrib/xmlrpc/: __init__.py  server.py
trigger/netdevices/: __init__.py  loader.py
trigger/netdevices/dispatchers/: base.py  core.py  napalm.py
trigger/netdevices/drivers/: __init__.py  arista.py  base.py  cisco.py  core.py  ioslike.py  juniper.py  linux.py  napalm.py
trigger/netdevices/handlers/: base.py  core.py  napalm.py
trigger/netdevices/loaders/: __init__.py  filesystem.py  mongodb.py
trigger/utils/: __init__.py  cli.py  importlib.py  network.py  rcs.py  templates.py  url.py  xmltodict.py
trigger/utils/notifications/: __init__.py  core.py  events.py  handlers.py
twisted/plugins/: trigger_xmlrpc.py
