[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trigger"
version = "2.0.0"
description = "Network automation toolkit for managing network devices"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{name = "Jathan McCollum", email = "jathan@gmail.com"}]
requires-python = ">=3.10,<3.12"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Twisted",
]
dependencies = [
    "IPy>=1.01",
    "cryptography>=41.0.0",
    "Twisted>=22.10.0",
    "crochet>=2.0.0",
    "pyasn1>=0.4.8",
    "pyparsing>=3.1.0",
    "pytz>=2023.3",
    "SimpleParse>=2.2.0",
    "textfsm>=1.1.0",
    "redis>=5.0.0",
    "PTable>=0.9.2",
    "peewee>=3.17.0",
    "service-identity>=23.1.0",
    "bcrypt>=4.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-twisted>=1.14.0",
    "ruff>=0.1.0",
    "python-semantic-release>=9.0.0",
]

[project.scripts]
acl = "trigger.bin.acl:main"
acl_script = "trigger.bin.acl_script:main"
aclconv = "trigger.bin.aclconv:main"
check_access = "trigger.bin.check_access:main"
check_syntax = "trigger.bin.check_syntax:main"
fe = "trigger.bin.fe:main"
find_access = "trigger.bin.find_access:main"
gnng = "trigger.bin.gnng:main"
gong = "trigger.bin.gong:main"
load_acl = "trigger.bin.load_acl:main"
load_config = "trigger.bin.load_config:main"
netdev = "trigger.bin.netdev:main"
optimizer = "trigger.bin.optimizer:main"
run_cmds = "trigger.bin.run_cmds:main"

[tool.setuptools]
packages = ["trigger", "trigger.acl", "trigger.bin", "trigger.changemgmt",
            "trigger.conf", "trigger.contrib", "trigger.netdevices",
            "trigger.packages", "trigger.utils", "twisted.plugins"]
include-package-data = true

[tool.setuptools.package-data]
twisted = ["plugins/trigger_xmlrpc.py"]

# Automatically includes files tracked by git in source distributions
# This includes: CHANGELOG, *.md, conf/, docs/, examples/, tests/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["trigger/packages", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (pytest uses asserts)
    "S603",   # subprocess without shell=True (we validate inputs)
    "S607",   # start process with partial path (standard practice)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests
    "PT",    # pytest style may vary in older tests
]
"trigger/bin/*.py" = [
    "T20",   # print statements OK in CLI tools
]

[tool.ruff.lint.isort]
known-first-party = ["trigger"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install uv && uv build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "build"]
major_tags = ["BREAKING CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
