[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trigger"
version = "2.2.3"
description = "Network automation toolkit for managing network devices"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{name = "Jathan McCollum", email = "jathan@gmail.com"}]
requires-python = ">=3.10,<3.12"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Twisted",
]
dependencies = [
    "IPy>=1.01",
    "cryptography>=41.0.0",
    "Twisted>=22.10.0",
    "crochet>=2.0.0",
    "pyasn1>=0.4.8",
    "pyparsing>=3.1.0",
    "pytz>=2023.3",
    "SimpleParse>=2.2.0",
    "textfsm>=1.1.0",
    "redis>=5.0.0",
    "PTable>=0.9.2",
    "peewee>=3.17.0",
    "service-identity>=23.1.0",
    "bcrypt>=4.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-twisted>=1.14.0",
    "ruff>=0.1.0",
    "python-semantic-release>=9.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx_rtd_theme>=2.0",
]

[project.scripts]
acl = "trigger.bin.acl:main"
acl_script = "trigger.bin.acl_script:main"
aclconv = "trigger.bin.aclconv:main"
check_access = "trigger.bin.check_access:main"
check_syntax = "trigger.bin.check_syntax:main"
fe = "trigger.bin.fe:main"
find_access = "trigger.bin.find_access:main"
gnng = "trigger.bin.gnng:main"
gong = "trigger.bin.gong:main"
load_acl = "trigger.bin.load_acl:main"
load_config = "trigger.bin.load_config:main"
netdev = "trigger.bin.netdev:main"
optimizer = "trigger.bin.optimizer:main"
run_cmds = "trigger.bin.run_cmds:main"

[tool.setuptools]
packages = ["trigger", "trigger.acl", "trigger.bin", "trigger.changemgmt",
            "trigger.conf", "trigger.contrib", "trigger.netdevices",
            "trigger.packages", "trigger.utils", "twisted.plugins"]
include-package-data = true

[tool.setuptools.package-data]
twisted = ["plugins/trigger_xmlrpc.py"]

# Automatically includes files tracked by git in source distributions
# This includes: CHANGELOG, *.md, conf/, docs/, examples/, tests/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["trigger/packages", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear - bug prevention
    "COM",    # flake8-commas - trailing comma consistency
    "D",      # pydocstyle - docstring formatting
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg - exception message hygiene
    "ERA",    # eradicate - commented-out code removal
    "F",      # pyflakes
    "FURB",   # refurb - modern Python idioms
    "I",      # isort - import sorting
    "PERF",   # perflint - performance patterns
    "PIE",    # flake8-pie - unnecessary constructs
    "PLR",    # pylint-refactor
    "PLW",    # pylint-warnings
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit - security
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade - Python 3 modernization
    "W",      # pycodestyle warnings
]
ignore = [
    # --- Formatter conflicts ---
    "COM812",   # trailing-comma-missing (handled by ruff formatter)

    # --- Kept from v2.0.0 baseline ---
    "E402",     # module-import-not-at-top-of-file
    "E501",     # line-too-long (handled by formatter)
    "E722",     # bare-except (intentional in many places)
    "E741",     # ambiguous-variable-name (existing code style)
    "F401",     # unused-import (may be used dynamically)
    "F403",     # undefined-local-with-import-star
    "F405",     # undefined-local-with-import-star-usage
    "F821",     # undefined-name
    "UP031",    # printf-string-formatting

    # --- Bugbear exceptions ---
    "B016",     # raise-literal (used intentionally in tests)
    # --- Docstring exceptions (not enforcing coverage/style) ---
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D105",     # undocumented-magic-method
    "D107",     # undocumented-public-init
    "D205",     # missing-blank-line-after-summary
    "D401",     # non-imperative-mood
    "D404",     # docstring-starts-with-this

    # --- Complexity (deep refactoring territory) ---
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "PLW0603",  # global-statement (parser pattern)

    # --- Security false positives for network toolkit ---
    "S101",     # assert (used in tests)
    "S605",     # start-process-with-a-shell (fix manually)
    "S606",     # start-process-with-no-shell

    # --- Other ---
    "RUF012",   # mutable-class-default (too many in device metadata)
    "SLF001",   # private-member-access (common in Twisted patterns)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",   # unused arguments (test fixtures)
    "D",     # docstrings not enforced in tests
    "E402",  # module-level imports not at top
    "E722",  # bare-except
    "E731",  # lambda assignments
    "F821",  # undefined names (test fixtures)
    "PT009", # pytest-unittest-assertion (allow mixing in tests)
    "PT027", # pytest-unittest-raises-assertion
    "S",     # security checks not relevant in tests
]
"tests/acceptance/**/*.py" = [
    "D",     # docstrings not enforced
    "E402",  # module-level imports not at top
    "E722",  # bare-except
    "F821",  # undefined names
    "S",     # security checks not relevant
]
"trigger/bin/**/*.py" = [
    "S605",  # start-process-with-a-shell (CLI tools)
    "S606",  # start-process-with-no-shell
    "S607",  # start-process-with-partial-path
]
"configs/**/*.py" = [
    "ERA001",  # commented-out code (serves as user documentation/examples)
    "PTH",     # pathlib (settings values are strings by design)
]
"docs/conf.py" = [
    "D",     # docstrings not enforced
    "E402",  # module-level imports not at top
    "F401",  # unused imports (used by Sphinx)
]

[tool.ruff.lint.isort]
known-first-party = ["trigger"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install uv && uv build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "build"]
major_tags = ["BREAKING CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
